more style stuff

--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -1,15 +1,15 @@
 <div [formGroup]="inputForm">
-  <div class="centered"><strong>Click map to add a segment</strong></div>
+  <div class="centered"><strong>Click stream segment to edit variables</strong></div>
   <div class="centered">- or -</div>
   <div class="form-row">
     <div class="vertical-center">
       <div>Comid <input class="input-comid" type="number" formControlName="comid" /></div>
     </div>
-    <div class="button" (click)="selectSegment()">Add/Select Segment</div>
+    <div class="button" (click)="selectSegment()">Select Segment</div>
   </div>
 
   <div *ngIf="selectedComId" class="segment-form">
-    <div><strong>Segment Loadings</strong></div>
+    <div class="centered"><strong>Segment Loadings</strong></div>
     <div>Parameters</div>
     <div class="scroll-pane list-short" *ngIf="parameters.length">
       <div *ngFor="let parameter of parameters" class="button">
