--- a/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.css
+++ b/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.css
@@ -7,9 +7,9 @@
 .panel-right-open {
     display: grid;
     grid-template-columns: auto 1fr;
-    column-gap: var(--column-gap);
 }
 
 app-map-control {
+    padding-top: 2px;
     background-color: var(--main-transparent);
 }
