--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.css
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.css
@@ -1,8 +1,3 @@
-mat-icon:hover {
-    cursor: pointer;
-    background-color: var(--main-hover);
-}
-
 .panel-left {
     display: grid;
     grid-template-rows: auto 1fr;
@@ -12,9 +7,9 @@ mat-icon:hover {
 .panel-left-open {
     display: grid;
     grid-template-columns: 1fr auto;
-    column-gap: var(--column-gap);
 }
 
 app-input {
+    padding-top: 2px;
     background-color: var(--main-transparent);
 }
