--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,10 @@ mat-icon:hover,
     background-color: var(--main-hover);
 }
 
+.icon-panel-toggle {
+    background-color: var(--main-transparent);
+}
+
 .active {
     background-color: var(--main-active);
 }
