--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --main-epa: #2f7b9e;
-    /* --main-color: rgb(250, 250, 210); */
+    --main-epa: rgb(47, 123, 158);
     --main-color: rgb(195, 195, 195);
     --main-background: rgb(176, 196, 222);
     --main-transparent: rgba(176, 196, 222, 0.75);
-    /* --main-button: steelblue; */
     --main-button: rgb(176, 196, 222);
     --main-hover: rgba(146, 146, 146, 0.5);
     --main-active: rgb(250, 146, 146);
     --main-ready: rgb(0, 200, 0);
 
-    --row-gap: .125rem;
+    --row-gap: .19rem;
     --column-gap: .125rem;
 
-    --main-max-panel-height: 720px;
+    --main-max-panel-height: 80vh;
 
     --main-list-short-height: 100px;
 }
@@ -37,7 +35,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: .75rem;
     display: grid;
     place-items: center;
-    height: 30px;
+    height: 1.5rem;
     border-radius: 5px;
     border: 1px solid rgb(150, 150, 150);
     background-color: var(--main-button);
