--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -10,7 +10,7 @@
             <div class="section-item" *ngIf="!huc">
                 <div class="form-row" [formGroup]="pPointForm">
                     <div class="vertical-center">
-                        <div>Comid <input type="number" class="input-comid" formControlName="pPointComid"/></div>
+                        <div>Comid <input type="number" class="input-comid" formControlName="pPointComid" /></div>
                     </div>
                     <div class="button" (click)="getPourPoint()" matTooltip="Get Pour Point">Get Pour Point</div>
                 </div>
@@ -38,12 +38,15 @@
                         <div class="button" (click)="clearCatchment()">Reset Pour Point</div>
                     </div>
                 </div>
-                
+
                 <div *ngIf="catchment && !stream" [formGroup]="distanceForm">
                     <div class="form-row">Upstream Distance (Km)<input type="number" formControlName="distance"></div>
                 </div>
-                <div class="button" *ngIf="huc && catchment && !stream && !loadingStream" (click)="getStreamNetwork()">Get stream network</div>
-                <div class="button" *ngIf="huc && catchment && !stream && loadingStream"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
+                <div class="button" *ngIf="huc && catchment && !stream && !loadingStream" (click)="getStreamNetwork()">
+                    Get stream network</div>
+                <div class="button" *ngIf="huc && catchment && !stream && loadingStream">
+                    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                </div>
             </div>
         </div>
 
@@ -52,7 +55,8 @@
             <div class="section-item" *ngIf="jsonFlags && !baseJson" [formGroup]="moduleForm">
                 <div class="centered"><strong>Select Base Simulation</strong></div>
                 <div>Base Simulation Selection Options</div>
-                <div *ngFor='let flag of jsonFlags'><input formControlName="{{flag}}" type="checkbox"/> {{ flag }}</div>
+                <div *ngFor='let flag of jsonFlags'><input formControlName="{{flag}}" type="checkbox" /> {{ flag }}
+                </div>
                 <div class="button" (click)="getBaseJSONByFlags()">Get Base Simulation</div>
             </div>
 
@@ -70,7 +74,11 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="vertical-center">Time Step size</div><div class="form-row"><div class="button">Hour</div><div class="button">Day</div></div>
+                        <div class="vertical-center">Time Step size</div>
+                        <div class="form-row">
+                            <div class="button">Hour</div>
+                            <div class="button">Day</div>
+                        </div>
                     </div>
                     <div class="form-row">
                         Use Alternate Step Size <input type="checkbox" formControlName="useFixStepSize" />
