--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -1,10 +1,15 @@
 <body>
     <app-header></app-header>
-    <div>
-        <app-expansion-panel-left [open]="true" class="float panel-left"></app-expansion-panel-left>
-        <div class="temp">
-            <app-multi-line-chart *ngIf="lineData !== undefined" [data]=lineData></app-multi-line-chart>
-        </div>
-    </div>
+    <mat-grid-list cols="3" rowHeight="fit">
+        <mat-grid-tile class="my-grid-tile" colspan="1" rowspan="3">
+            <app-output-panel-left></app-output-panel-left>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="2" rowspan="2">
+            <div>
+                <app-multi-line-chart *ngIf="lineData !== undefined" [data]=lineData></app-multi-line-chart>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="2" rowspan="1">C</mat-grid-tile>
+    </mat-grid-list>
     <app-footer></app-footer>
 </body>
