--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -7,8 +7,19 @@ body {
 app-footer {
     text-align: center;
 }
+
+mat-grid-list {
+    width: 95%;
+    margin: 0 auto;
+}   
     
 mat-grid-tile div {
     height: 100%;
     width: 100%;
+}
+
+mat-grid-tile {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
