--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -90,20 +90,43 @@
             </div>
         </div>
 
+
+        <div class="container-item" *ngIf="stream && baseJson" [formGroup]="svForm">
+            <div class="centered"><strong>State Variables</strong></div>
+            <div class="form-row">               
+                <div>Total N<input type="checkbox" formControlName="totalN" /></div>
+                <div *ngIf="!svForm.get('totalN').value">
+                    <div>Amonia and Nitrate<input name="nType" type="radio" formControlName="nType" value="amonia_nitrate" /></div>
+                    <div>Nitrogen<input name="nType" type="radio" formControlName="nType" value="nitrogen" /></div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div>Total P<input type="checkbox" formControlName="totalP" /></div>
+                <div *ngIf="!svForm.get('totalP').value">
+                    <div>Phosphorus<input name="pType" type="radio" formControlName="pType" value="phosphorus" /></div>
+                    <div>Phosphate<input name="pType" type="radio" formControlName="pType" value="phosphate" /></div>
+                </div>
+            </div>
+            <div>Organic Matter</div>
+        </div>
+
         <div class="container-item" *ngIf="stream && baseJson">
             <div class="centered"><strong>Stream Segments</strong></div>
             <app-segment-list></app-segment-list>
             <app-comid-select-input></app-comid-select-input>
         </div>
+
         <div class="container-item" *ngIf="baseJson && stream">
             <div class="button" (click)="addData()">Add Simulation Data</div>
-            <div class="button" (click)="executeSimulation()">Execute Aquatox Simulation</div>
             <div class="button" (click)="cancelExecution()">Cancel Simulation Execution</div>
             <div class="button" (click)="clearBaseJson()">Reset Base Simulation</div>
             <div class="button" (click)="getSimStatus()">Check Status</div>
             <div class="button" (click)="getSimResults()" [class.ready]="simComplete">Get Data</div>
             <div class="button" (click)="downloadSimResults()" [class.ready]="simComplete">Download Data</div>
         </div>
+    </div>
+    <div *ngIf="baseJson && stream">
+        <div class="button" (click)="executeSimulation()">Execute Aquatox Simulation</div>
     </div>
 
     <!-- HMS section -->
