--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-    <strong class="centered">Layer Controls</strong>
+    <strong class="centered">Map Layers</strong>
     <div class="scroll-pane">
         <div class="container-item">
             <div>Basemaps</div>
@@ -14,7 +14,7 @@
         </div>
     
         <div class="container-item" *ngIf="simFeatures.length" >
-            <div>Area of Interest</div>
+            <div>Study Area</div>
             <app-layer-control *ngFor="let feature of simFeatures" [feature]="feature"></app-layer-control>
         </div>
     </div>
