--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -117,6 +117,7 @@
         </div>
 
         <div class="container-item" *ngIf="baseJson && stream">
+            <div class="button" (click)="initSim()">initSim</div>
             <div class="button" (click)="addData()">Add Simulation Data</div>
             <div class="button" (click)="cancelExecution()">Cancel Simulation Execution</div>
             <div class="button" (click)="clearBaseJson()">Reset Base Simulation</div>
