--- a/src/app/components/output/plot-container/plot-container.component.html
+++ b/src/app/components/output/plot-container/plot-container.component.html
@@ -1,9 +1,15 @@
 <div style="padding: 20px;">
+    <mat-form-field *ngIf="catchmentList">
+        <mat-label>Catchment</mat-label>
+        <mat-select [(ngModel)]="selectedCatchment" (selectionChange)="catchmentChange($event)">
+            <mat-option *ngFor="let c of catchmentList" [value]="c">{{c}}</mat-option>
+        </mat-select>
+    </mat-form-field>
     <mat-form-field>
         <mat-label>State Variables</mat-label>
-        <mat-select [(ngModel)]="plotTitle" (selectionChange)="dataChange($event)">
+        <mat-select [(ngModel)]="plotTitle" (selectionChange)="svChange($event)">
             <mat-option *ngFor="let sv of stateVariablesList" [value]="sv">{{sv}}</mat-option>
         </mat-select>
     </mat-form-field>
-    <app-plotly *ngIf="data" [data]="data" [plotTitle]="plotTitle"></app-plotly>
+    <app-plotly *ngIf="plotData" [data]="plotData" [plotTitle]="plotTitle"></app-plotly>
 </div>
