--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -2,3 +2,11 @@
     width: 100%;
     height: 100%;
 }
+
+.mat-form-field {
+    margin: 5px
+}
+
+.mat-form-field-ripple {
+    background-color: var(--main-epa) !important;
+}
