--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -1,8 +1,33 @@
 :host {
-    width: 100%;
     height: 100%;
 }
+.container {
+    box-sizing: border-box;
+    height: 100%; 
+    width: 100%; 
+    overflow: hidden;
+}
 
+.errorContainer{
+    display: flex;
+    box-sizing: border-box;
+    width: 100%; 
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.errorBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 150px;
+    width: 300px;
+    background-color: var(--main-active);
+    border-radius: 5px;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+}
 .mat-form-field {
     margin: 5px
 }
