--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -1,6 +1,12 @@
 :host {
     height: 100%;
 }
+
+.upper-c {
+    height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr;
+}
 .container {
     box-sizing: border-box;
     height: 100%; 
@@ -29,7 +35,12 @@
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
 .mat-form-field {
+    height: 50px;
     margin: 5px
+}
+
+.mat-form-field-wrapper {
+    padding-bottom: 1em;
 }
 
 .mat-form-field-ripple {
