--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -66,7 +66,7 @@
     text-align: center;
     width: 100vw;
     position: fixed;
-    background: #323a45;
+    background: var(--main-epa);
     height: 10vh;
     display: flex;
     justify-content: center; 
