changed footer pop up menu to --main-epa

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -129,7 +129,7 @@
     cursor: pointer;
 }
 ::ng-deep .footer-link-block {
-    background: #323a45 !important;
+    background: var(--main-epa) !important;
 }
 .footer-link {
     color: white;
