--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -12,18 +12,20 @@ app-footer {
     width: 95%;
     margin: 0 auto 5px auto;
 }
+
 .add {
     transform: scale(1.3);
     color: rgba(0, 0, 0, 0.54);
 }
 
-/*****************/
-.categories-container {
+/*****************/ 
+.dashboard-container {
     min-width: 0;
     min-height: 0;
-    margin: 0 20px 30px 20px;
+    margin: 0 20px 20px 20px;
 }
-.categories {
+
+.cdkDropListGroup {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap; /* NEW */
@@ -31,7 +33,7 @@ app-footer {
   height: 100%;
 }
 
-.inner {
+.cdkDrag {
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -42,7 +44,7 @@ app-footer {
   cursor: move;
 }
 
-.categories-item {
+.cdkDropList {
   flex: 1 0 5rem; /* NEW */
   margin: 5px;
   background-color: transparent;
@@ -56,7 +58,7 @@ app-footer {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-handle {
+.cdkDragHandle {
   position: absolute;
   top: 10px;
   right: 10px;
