--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -1,12 +1,15 @@
 :host {
     height: 100%;
+    font-size: 13px;
 }
 
 .upper-c {
     height: 100%;
+    width: 100%;
     display: grid;
     grid-template-rows: auto 1fr;
 }
+
 .container {
     box-sizing: border-box;
     height: 100%; 
@@ -14,35 +17,29 @@
     overflow: hidden;
 }
 
-.errorContainer{
-    display: flex;
-    box-sizing: border-box;
-    width: 100%; 
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-}
-
-.errorBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 150px;
-    width: 300px;
-    background-color: var(--main-active);
-    border-radius: 5px;
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-}
-.mat-form-field {
-    height: 50px;
-    margin: 5px
-}
-
-.mat-form-field-wrapper {
-    padding-bottom: 1em;
-}
-
 .mat-form-field-ripple {
     background-color: var(--main-epa) !important;
+}
+
+::ng-deep .menu {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 13px;
+}
+
+.menu-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+}
+
+.menu-field {
+    width: 100%;
+}
+
+.menu-button {
+    color: red;
 }
