--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -18,7 +18,7 @@
                                 <path d="M0 0h24v24H0z" fill="none"></path>
                             </svg>
                         </div>
-                        <app-plot-container (deleteItem)="delete($event)" [dropListData]="index">
+                        <app-plot-container (deleteItem)="delete($event)" [dropListData]="i">
                         </app-plot-container>
                     </div>
                 </div>
