implement simulation status messages and work indicator

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
                 class="footer-epa-logo"></span></a>
     </div>
     <div class="footer-title-block">
-        <button mat-button [matMenuTriggerFor]="discover" class="footer-title">Discover.</button>
+        <button mat-button [matMenuTriggerFor]="discover" class="footer-title">Discover</button>
         <mat-menu #discover="matMenu" class="footer-link-block">
             <button mat-menu-item class="footer-link" (click)="linksClick('accessibility')">Accessibility</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('administrator')">EPA Administrator</button>
@@ -20,7 +20,7 @@
         </mat-menu>
     </div>
     <div class="footer-title-block">
-        <button mat-button [matMenuTriggerFor]="connect" class="footer-title">Connect.</button>
+        <button mat-button [matMenuTriggerFor]="connect" class="footer-title">Connect</button>
         <mat-menu #connect="matMenu" class="footer-link-block">
             <button mat-menu-item class="footer-link" (click)="linksClick('data')">Data.gov</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('inspectorgeneral')">Inspector
@@ -35,7 +35,7 @@
         </mat-menu>
     </div>
     <div class="footer-title-block">
-        <button mat-button [matMenuTriggerFor]="ask" class="footer-title">Ask.</button>
+        <button mat-button [matMenuTriggerFor]="ask" class="footer-title">Ask</button>
         <mat-menu #ask="matMenu" class="footer-link-block">
             <button mat-menu-item class="footer-link" (click)="linksClick('contactus')">Contact Us</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('hotlines')">Hotlines</button>
@@ -44,7 +44,7 @@
         </mat-menu>
     </div>
     <div class="footer-title-block follow-button">
-        <button mat-button [matMenuTriggerFor]="follow" class="footer-title">Follow.</button>
+        <button mat-button [matMenuTriggerFor]="follow" class="footer-title">Follow</button>
         <mat-menu #follow="matMenu" class="footer-link-block">
             <button mat-menu-item class="social-link social-facebook" (click)="linksClick('facebook')"></button>
             <button mat-menu-item class="social-link social-twitter" (click)="linksClick('twitter')"></button>
