--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,3 @@
-:host {
-    height: 10vh;
-}
 @media screen and (min-width:980px)
 {
     .footer-banner {
@@ -63,32 +60,23 @@
 }
 
 #footer-banner {
-    text-align: center;
-    width: 100vw;
-    position: fixed;
     background: var(--main-epa);
-    height: 10vh;
     display: flex;
-    justify-content: center; 
 }
 .footer-block {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 100%;
-    text-align: center;
+    width: 20%;
 }
 .footer-epa-logo {
-    background: url(/assets/images/epa-seal.svg) no-repeat;
+    background: url(/assets/images/epa-seal.svg);
     background-size: contain;
-    color: transparent;
     display: inline-block;
     position: relative;
-    font: 0/0 a;
     height: 85%;
-    width: 90%;
-    text-shadow: none;
-    margin: 5px;
+    width: 85%;
+    margin: .25rem;
 }
 .footer-epa-logo-link {
     text-decoration: none;
@@ -100,10 +88,8 @@
 }
 .footer-title-block {
     width: 20%;
-    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    place-items: center;
 }
 .footer-title-block button:focus {
     outline: none;
@@ -111,10 +97,6 @@
 .footer-title {
     color: white;
     font-weight: 700;
-    position: absolute;
-    background: transparent;
-    border: none;
-    box-shadow: none;
     font-family: Merriweather,Georgia,Cambria,"Times New Roman",Times,serif;
 }
 .footer-title:active {
