--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -1,12 +1,9 @@
 <div class="input-container">
-    <strong class="centered">Aquatox WebWorkflow</strong>
+    <strong class="centered">Aquatox WebWorkflow Alpha v0.1.0</strong>
     <div class="scroll-pane">
         <!-- AOI section -->
         <div class="container-item">
             <div class="centered"><strong>Study Area</strong></div>
-            <div class="form-row">
-                <div>Study Name </div><input type="text">
-            </div>
             <div class="section-item" *ngIf="!huc">
                 <div class="form-row" [formGroup]="pPointForm">
                     <div class="vertical-center">
@@ -118,54 +115,23 @@
 
         <div class="container-item" *ngIf="baseJson && stream">
             <div class="button" (click)="initSim()">initSim</div>
-            <div class="button" (click)="addData()">Add Simulation Data</div>
-            <div class="button" (click)="cancelExecution()">Cancel Simulation Execution</div>
             <div class="button" (click)="clearBaseJson()">Reset Base Simulation</div>
-            <div class="button" (click)="getSimStatus()">Check Status</div>
-            <div class="button" (click)="getSimResults()" [class.ready]="simComplete">Get Data</div>
+            <!-- <div class="button" (click)="addData()">Add Simulation Data</div>
+            <div class="button" (click)="cancelExecution()">Cancel Simulation Execution</div>
+            <div class="button" (click)="getSimStatus()">Check Status</div> -->
+        </div>
+    </div>
+    <div class="container-item" *ngIf="baseJson && stream">
+        <div *ngIf="simulationExecuting">{{ status_message }}</div>
+        <div *ngIf="simComplete">
+            <div class="button" (click)="gotoOutput()" [class.ready]="simComplete">Examine Output</div>
             <div class="button" (click)="downloadSimResults()" [class.ready]="simComplete">Download Data</div>
         </div>
     </div>
     <div *ngIf="baseJson && stream">
-        <div class="button" (click)="executeSimulation()">Execute Aquatox Simulation</div>
-    </div>
-
-    <!-- HMS section -->
-    <!-- <div class="container-item">
-        <div>HMS Data</div>
-        <div class="section-item" id="mat-progress-bar" *ngIf="loadingApi">
+        <div class="button" *ngIf="!simulationExecuting" (click)="executeSimulation()">Execute Aquatox Simulation</div>
+        <div class="button" *ngIf="simulationExecuting">
             <mat-progress-bar mode="indeterminate"></mat-progress-bar>
         </div>
-        <div class="section-item" *ngIf="!loadingApi">
-            <div id="api-form" [formGroup]="apiForm">
-                <select formControlName="endpointSelect" (change)="updateEndpointForm()">
-                    <option [value]='null' selected>Available data requests</option>
-                    <option *ngFor="let endpoint of apiEndpointList">{{ endpoint.endpoint }}</option>
-                </select>
-            </div>
-        </div>
-        <div class="section-item" *ngIf="currentEndpoint">
-            <form id="endpoint-form" [formGroup]="endpointForm">
-                <div id="summary">{{ currentEndpoint.summary || 'this endpoint has no summary' }}</div>
-                <div *ngFor="let input of formInputs" class="form-row">
-                    <label for="{{input}}">{{input}}</label>
-                    <input formControlName="{{input}}" type="text">
-                </div>
-                <div class="controls">
-                    <div class="button" (click)="reset()">Clear form</div>
-                    <div> 
-                        <div *ngIf="!waiting" class="button" (click)="submitHMSDataRequest()">submit form</div>
-                        <div *ngIf="waiting" class="button"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="section-item">
-            <div>HMS data</div>
-            <div *ngIf="!responseList.length">Make HMS request to retrieve data</div>
-            <div *ngFor="let response of responseList" class="button" (click)="gotoData(response.endpoint)">
-                <div>{{ response.endpoint }} {{ response.dataSource }} {{ response.dataset }} <mat-icon title="Download Data">download</mat-icon> <mat-icon title="Remove Data">delete</mat-icon></div>
-            </div>
-        </div>
-    </div> -->
+    </div>
 </div>
