added download button and table chart to output

--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -40,6 +40,10 @@
     width: 100%;
 }
 
-.menu-button {
+.delete-button {
     color: red;
+}
+
+.delete-button:hover, .download-button:hover {
+    opacity: 0.5;
 }
