--- a/src/app/components/output/plot-container/plot-container.component.html
+++ b/src/app/components/output/plot-container/plot-container.component.html
@@ -11,7 +11,7 @@
             <mat-form-field class="menu-field" *ngIf="stateVariablesList && chart !== 'table'"
                 (click)="$event.stopPropagation()">
                 <mat-label>State Variables</mat-label>
-                <mat-select [(ngModel)]="plotTitle" (selectionChange)="svChange($event)">
+                <mat-select [(ngModel)]="selectedSV" (selectionChange)="svChange($event)">
                     <mat-option *ngFor="let sv of stateVariablesList" [value]="sv">{{sv}}</mat-option>
                 </mat-select>
             </mat-form-field>
@@ -30,7 +30,7 @@
     </div>
     <div [ngClass]="{container: plotData, errorContainer: !plotData}">
         <app-plotly *ngIf="plotData && chart !== 'table'" [data]="plotData" [plotTitle]="plotTitle"></app-plotly>
-        <app-table *ngIf="plotData && chart === 'table'" [columnNames]="tableColumnNames"
-            [columnData]="tableColumnData"></app-table>
+        <app-table *ngIf="plotData && chart === 'table'" [columnNames]="tableColumnNames" [columnData]="tableColumnData"
+            [catchment]="selectedCatchment"></app-table>
     </div>
 </div>
