--- a/src/app/components/output/table/table.component.html
+++ b/src/app/components/output/table/table.component.html
@@ -1,20 +1,15 @@
-<div class="table-container">
-  <div>
-    <table #table mat-table [dataSource]="dataSource" fixedLayout="false">
-      <ng-container *ngFor="let col of columnNames" matColumnDef="{{col}}">
-        <th mat-header-cell *matHeaderCellDef>
-          <div>{{ col }}</div>
-        </th>
-        <td mat-cell *matCellDef="let row">{{ row[col] }}</td>
+<div class="container">
+  <div class="title">Catchment: {{catchment}}</div>
+  <div class="table-container">
+    <table mat-table [dataSource]="dataSource" style="height: 100%; width: 100%;" matSort>
+      <ng-container *ngFor="let col of columnNames" [matColumnDef]="col">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col}}</th>
+        <td mat-cell *matCellDef="let row">{{row[col]}}</td>
       </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+      <tr mat-header-row *matHeaderRowDef="columnNames; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: columnNames;"></tr>
     </table>
   </div>
-</div>
-<div>
-  <!--
-  <mat-paginator [pageSizeOptions]="[1, 5, 10, 20]" showFirstLastButtons></mat-paginator>
--->
+  <mat-paginator style="border-radius: 5px;" [pageSizeOptions]="[5, 10, 20, dataSource.data.length]"
+    showFirstLastButtons></mat-paginator>
 </div>
